latest sc function fails in aws

--- a/spring-cloud-function-samples/function-sample-aws/build.gradle
+++ b/spring-cloud-function-samples/function-sample-aws/build.gradle
@@ -1,18 +1,21 @@
 buildscript {
 	ext {
-		springBootVersion = '2.6.7'
-		wrapperVersion = '1.0.29.BUILD-SNAPSHOT'
-		shadowVersion = '5.1.0'
+		springBootVersion = '3.0.0'
+		wrapperVersion = '1.0.29.RELEASE'
+		shadowVersion = '8.1.1'
 	}
 	repositories {
 		mavenLocal()
 		jcenter()
 		mavenCentral()
+		maven {
+			url = uri("https://plugins.gradle.org/m2/")
+		}
 		maven { url "https://repo.spring.io/snapshot" }
 		maven { url "https://repo.spring.io/milestone" }
 	}
 	dependencies {
-		classpath "com.github.jengelman.gradle.plugins:shadow:${shadowVersion}"
+		classpath("com.github.johnrengelman:shadow:${shadowVersion}")
 		classpath("org.springframework.boot.experimental:spring-boot-thin-gradle-plugin:${wrapperVersion}")
 		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
 		classpath("io.spring.gradle:dependency-management-plugin:1.0.8.RELEASE")
@@ -22,15 +25,15 @@ buildscript {
 apply plugin: 'java'
 apply plugin: 'maven-publish'
 apply plugin: 'eclipse'
-apply plugin: 'com.github.johnrengelman.shadow'
+apply plugin: "com.github.johnrengelman.shadow"
 apply plugin: 'org.springframework.boot'
 apply plugin: 'org.springframework.boot.experimental.thin-launcher'
 apply plugin: 'io.spring.dependency-management'
 
 group = 'io.spring.sample'
 version = '2.0.0.RELEASE'
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
+sourceCompatibility = 17
+targetCompatibility = 17
 
 repositories {
 	mavenLocal()
@@ -40,7 +43,7 @@ repositories {
 }
 
 ext {
-	springCloudFunctionVersion = "3.2.4"
+	springCloudFunctionVersion = "4.0.2" // 4.0.x Fails, 3.2.10 works
 	awsLambdaEventsVersion = "3.9.0"
 	awsLambdaCoreVersion = "1.1.0"
 }
@@ -57,7 +60,7 @@ jar {
 import com.github.jengelman.gradle.plugins.shadow.transformers.*
 
 shadowJar {
-	classifier = 'aws'
+	archiveClassifier = 'aws'
 	dependencies {
 		exclude(
 			dependency("org.springframework.cloud:spring-cloud-function-web:${springCloudFunctionVersion}"))
@@ -91,3 +94,5 @@ dependencies {
 	compileOnly("com.amazonaws:aws-lambda-java-core:${awsLambdaCoreVersion}")
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
+
+resolveMainClassName.dependsOn = [thinPom]
